attempting to fix DB  bug

--- a/finddup/src/main/webapp/home.xhtml
+++ b/finddup/src/main/webapp/home.xhtml
@@ -7,9 +7,8 @@
     <f:metadata>
         <f:viewParam id="id" name="filePattern" value="#{findDupsUI.filePattern}"
                      required="true"
-                     requiredMessage="You did not specify an id. (The id parameter is missing)"
-                     converterMessage="Invalid id. (The id parameter is not a number)"
-                     validatorMessage="Invalid id. (The id parameter is not a positive number)">
+                     requiredMessage="You did not specify a filePattern"
+>
         </f:viewParam>
     </f:metadata>
 
